ReadBoard search box UI almost finalize, ouhhhh...

--- a/client/index.html
+++ b/client/index.html
@@ -29,7 +29,7 @@
 
     <!-- 3. Display the application -->
     <body>
-    <read-adda></read-adda>
+    <read-adda>Loading....</read-adda>
     <!--<ra-header></ra-header>
     <left></left>
     <content></content>
