Added Nice Editor to writeboard

--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,7 @@
                     "app": "app"
                 }
             });
+            //bkLib.onDomLoaded(function() { nicEditors.allTextAreas() });
             System.import('app/main.js');
         </script>
     </head>
