--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,7 @@
     <head>
         <base href="/">
         <title>ReadAdda</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">    
-
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- inject:js -->
         <!-- endinject -->
 
@@ -26,7 +25,7 @@
             });
             //bkLib.onDomLoaded(function() { nicEditors.allTextAreas() });
             System.import('app/main.js');
-            system.import('node_modules/angular2/es6/dev/src/testing/shims_for_IE.js')
+            System.import('node_modules/angular2/es6/dev/src/testing/shims_for_IE.js')
         </script>
     </head>
 
